src/main/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: koenigt-helloworld
  namespace: koenigt
spec:
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: koenigt-helloworld-backend
