src/main/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: koenigt-helloworld-backend-ingress
  namespace: koenigt
  annotations:
    ingress.kubernetes.io/rewrite-target: / 
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
    - http:
        paths:
        - path: /koenigt
          backend:
            serviceName: koenigt-helloworld
            servicePort: http
